fix(rest-api): only considers "active" subscription with `subscribableBy` params